Bug 22363: Fix with spacing between groups

--- a/client/app/components/dashboard/ualReport/ualReportForm/ualDataSource/ualDataSourceGroup/ualDataSourceGroup.scss
+++ b/client/app/components/dashboard/ualReport/ualReportForm/ualDataSource/ualDataSourceGroup/ualDataSourceGroup.scss
@@ -8,6 +8,9 @@ ual-data-source-group {
 }
 
 ual-data-source-group {
+  padding-bottom: 20px;
+  display: block;
+  @include break-inside();
   .datasource-group{
     @include font-clanot-bold(16);
     color: $color06;
